--- a/GameTime/WebContent/index.xhtml
+++ b/GameTime/WebContent/index.xhtml
@@ -9,7 +9,7 @@
       <ui:define name="title">Welcome</ui:define>
       
       <ui:define name="contents">
-      	<h1>Welcome to JavaHostel</h1>
+      	<h1>Welcome to GameTime</h1>
       	<p>Under development.</p>
       </ui:define>
       
