--- a/GameTime/WebContent/resources/decorator.xhtml
+++ b/GameTime/WebContent/resources/decorator.xhtml
@@ -6,6 +6,7 @@
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="#{facesContext.externalContext.requestContextPath}/resources/templatemo_style.css" rel="stylesheet" type="text/css" />
+<link href="#{facesContext.externalContext.requestContextPath}/resources/gametime.css" rel="stylesheet" type="text/css" />
 <title><h:outputText value="GameTime :: " /><ui:insert name="title" /></title>
 </h:head>
 <h:body>
@@ -24,7 +25,7 @@
             <ul>
                 <li><a href="#{facesContext.externalContext.requestContextPath}/">Home</a></li>
                 <li><a href="#{facesContext.externalContext.requestContextPath}/registration/index.faces">Registration</a></li>
-                <li><a href="#">Link 02</a></li>
+                <li><a href="#{facesContext.externalContext.requestContextPath}/cadastro/game/index.faces">Game</a></li>
                 <li><a href="#">Link 03</a></li>
                 <li><a href="#">Link 04</a></li>
                 <li><a href="#" class="last">Link 05</a></li>
