--- a/GameTime/WebContent/manageGameAccount/list.xhtml
+++ b/GameTime/WebContent/manageGameAccount/list.xhtml
@@ -7,27 +7,27 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/resources/decorator.xhtml">
 
-    <ui:define name="title"><h:outputText value="#{msgsGametime['manageConta.title']}" /></ui:define>
+    <ui:define name="title"><h:outputText value="#{msgsGametime['manageGameAccount.title']}" /></ui:define>
 
     <ui:define name="contents">
-        <h1><h:outputText value="#{msgsGametime['manageConta.title']}" /></h1>
+        <h1><h:outputText value="#{msgsGametime['manageGameAccount.title']}" /></h1>
 
         <div class="crud">
             <!-- Filter bar: used to filter the listing (displayed when there is at least one filter available). -->
             <h:form id="filterForm">
-                <h:panelGroup id="filterBar" rendered="#{(not empty manageContaController.filters)}">
+                <h:panelGroup id="filterBar" rendered="#{(not empty manageGameAccountController.filters)}">
                     <div class="crudFilterBar">
                         <h:outputText value="#{msgsGametime['crud.text.filter']} " />
-                        <p:selectOneMenu id="filter" required="true" value="#{manageContaController.filterKey}">
-                            <f:selectItems value="#{manageContaController.filters}" var="filter" itemLabel="#{filter.label}" itemValue="#{filter.key}" />
-                            <f:ajax event="change" execute="@form" listener="#{manageContaController.changeFilter}" render="@form :listingForm :buttonsForm" />
+                        <p:selectOneMenu id="filter" required="true" value="#{manageGameAccountController.filterKey}">
+                            <f:selectItems value="#{manageGameAccountController.filters}" var="filter" itemLabel="#{filter.label}" itemValue="#{filter.key}" />
+                            <f:ajax event="change" execute="@form" listener="#{manageGameAccountController.changeFilter}" render="@form :listingForm :buttonsForm" />
                         </p:selectOneMenu>
                         <h:outputText value=": " />
-                        <p:inputText id="filterText" size="20" required="false" value="#{manageContaController.filterParam}" rendered="#{manageContaController.filter.options == null}" />
-                        <p:selectOneMenu id="filterSelect" required="false" value="#{manageContaController.filterParam}" rendered="#{manageContaController.filter.options != null}">
-                            <f:selectItems value="#{manageContaController.filter.reversedOptionsLabels}" />
+                        <p:inputText id="filterText" size="20" required="false" value="#{manageGameAccountController.filterParam}" rendered="#{manageGameAccountController.filter.options == null}" />
+                        <p:selectOneMenu id="filterSelect" required="false" value="#{manageGameAccountController.filterParam}" rendered="#{manageGameAccountController.filter.options != null}">
+                            <f:selectItems value="#{manageGameAccountController.filter.reversedOptionsLabels}" />
                         </p:selectOneMenu>
-                        <p:commandLink action="#{manageContaController.filter}" process="@form" update=":listingForm :buttonsForm">
+                        <p:commandLink action="#{manageGameAccountController.filter}" process="@form" update=":listingForm :buttonsForm">
                             <h:graphicImage style="border: 0;" value="/resources/icons/button-find.png" title="#{msgsGametime['crud.button.filter']}" />
                         </p:commandLink>
                         <p:hotkey bind="#{msgsGametime['crud.hotkey.filterFocus']}" handler="if (findObjectById('filterForm:filterText') != null) findObjectById('filterForm:filterText').focus(); else findObjectById('filterForm:filterSelect').focus();" />
@@ -38,16 +38,16 @@
             <!-- The listing form. -->
             <h:form id="listingForm">
                 <!-- Filter information (displayed when the listing is being filtered. -->
-                <h:panelGroup id="filterInfo" rendered="#{manageContaController.filtering}">
+                <h:panelGroup id="filterInfo" rendered="#{manageGameAccountController.filtering}">
                     <div class="crudFilterInfo">
                         <h:outputFormat value="#{msgsGametime['crud.text.filterInfo']} ">
-                            <f:param value="#{manageContaController.filter.label}" />
-                            <f:param value="#{manageContaController.filterLabel}" />
+                            <f:param value="#{manageGameAccountController.filter.label}" />
+                            <f:param value="#{manageGameAccountController.filterLabel}" />
                         </h:outputFormat>
-                        <p:commandLink action="#{manageContaController.cancelFilter}" process="@form" update="@form :buttonsForm">
+                        <p:commandLink action="#{manageGameAccountController.cancelFilter}" process="@form" update="@form :buttonsForm">
                             <h:graphicImage style="border: 0;" value="/resources/icons/button-close.png" title="#{msgsGametime['crud.button.cancelFilter']}" />
                         </p:commandLink>
-                        <p:hotkey bind="#{msgsGametime['crud.hotkey.clearFilter']}" action="#{manageContaController.cancelFilter}" process="@form" update=":listingForm :buttonsForm" />
+                        <p:hotkey bind="#{msgsGametime['crud.hotkey.clearFilter']}" action="#{manageGameAccountController.cancelFilter}" process="@form" update=":listingForm :buttonsForm" />
                     </div>
                 </h:panelGroup>
 
@@ -55,20 +55,20 @@
                 <h:panelGroup id="listing" styleClass="listing">
                     <p:dataTable
                         widgetVar="listingTable"
-                        value="#{manageContaController.lazyEntities}" 
+                        value="#{manageGameAccountController.lazyEntities}" 
                         var="entity" 
-                        rows="#{manageContaController.maxDataTableRowsPerPage}" 
-                        rowsPerPageTemplate="#{manageContaController.halfMaxDataTableRowsPerPage},#{manageContaController.maxDataTableRowsPerPage},#{manageContaController.doubleMaxDataTableRowsPerPage}"
+                        rows="#{manageGameAccountController.maxDataTableRowsPerPage}" 
+                        rowsPerPageTemplate="#{manageGameAccountController.halfMaxDataTableRowsPerPage},#{manageGameAccountController.maxDataTableRowsPerPage},#{manageGameAccountController.doubleMaxDataTableRowsPerPage}"
                         lazy="true" 
                         paginator="true" 
-                        selection="#{manageContaController.selectedEntity}" 
+                        selection="#{manageGameAccountController.selectedEntity}" 
                         selectionMode="single" 
                         paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}" 
                         paginatorPosition="bottom" 
                         loadingMessage="#{msgsGametime['text.ajax.loading']}" 
-                        emptyMessage="#{manageContaController.filtering ? msgsGametime['manageConta.text.noEntitiesFiltered'] : msgsGametime['manageConta.text.noEntities']}">
+                        emptyMessage="#{manageGameAccountController.filtering ? msgsGametime['manageGameAccount.text.noEntitiesFiltered'] : msgsGametime['manageGameAccount.text.noEntities']}">
 
-                        <p:column headerText="#{msgsGametime['manageConta.form.name']}">
+                        <p:column headerText="#{msgsGametime['manageGameAccount.form.name']}">
                             <h:outputText value="#{entity.name}" />
                         </p:column>
                        
@@ -84,28 +84,28 @@
             <!-- Buttons shown below the listing. -->
             <h:form id="buttonsForm">
                 <div class="crudButtons">
-                    <p:commandButton action="#{manageContaController.create}" value="#{msgsGametime['crud.button.create']}" icon="buttonNew" />
-                    <p:commandButton action="#{manageContaController.retrieve}" value="#{msgsGametime['crud.button.retrieve']}" icon="buttonView" disabled="#{manageContaController.selectedEntity == null}" />
-                    <p:commandButton action="#{manageContaController.update}" value="#{msgsGametime['crud.button.update']}" icon="buttonEdit" disabled="#{manageContaController.selectedEntity == null}" />
-                    <p:commandButton action="#{manageContaController.trash}" value="#{msgsGametime['crud.button.delete']}" icon="buttonTrash" disabled="#{manageContaController.selectedEntity == null}" process="@this" update=":trashForm" />
-                    <p:hotkey bind="#{msgsGametime['crud.hotkey.create']}" action="#{manageContaController.create}" />
-                    <p:hotkey bind="#{msgsGametime['crud.hotkey.retrieve']}" action="#{manageContaController.retrieve}" rendered="#{manageContaController.selectedEntity != null}" />
-                    <p:hotkey bind="#{msgsGametime['crud.hotkey.update']}" action="#{manageContaController.update}" rendered="#{manageContaController.selectedEntity != null}" />
-                    <p:hotkey bind="#{msgsGametime['crud.hotkey.delete']}" action="#{manageContaController.trash}" rendered="#{manageContaController.selectedEntity != null}" process="@this" update=":trashForm" />
+                    <p:commandButton action="#{manageGameAccountController.create}" value="#{msgsGametime['crud.button.create']}" icon="buttonNew" />
+                    <p:commandButton action="#{manageGameAccountController.retrieve}" value="#{msgsGametime['crud.button.retrieve']}" icon="buttonView" disabled="#{manageGameAccountController.selectedEntity == null}" />
+                    <p:commandButton action="#{manageGameAccountController.update}" value="#{msgsGametime['crud.button.update']}" icon="buttonEdit" disabled="#{manageGameAccountController.selectedEntity == null}" />
+                    <p:commandButton action="#{manageGameAccountController.trash}" value="#{msgsGametime['crud.button.delete']}" icon="buttonTrash" disabled="#{manageGameAccountController.selectedEntity == null}" process="@this" update=":trashForm" />
+                    <p:hotkey bind="#{msgsGametime['crud.hotkey.create']}" action="#{manageGameAccountController.create}" />
+                    <p:hotkey bind="#{msgsGametime['crud.hotkey.retrieve']}" action="#{manageGameAccountController.retrieve}" rendered="#{manageGameAccountController.selectedEntity != null}" />
+                    <p:hotkey bind="#{msgsGametime['crud.hotkey.update']}" action="#{manageGameAccountController.update}" rendered="#{manageGameAccountController.selectedEntity != null}" />
+                    <p:hotkey bind="#{msgsGametime['crud.hotkey.delete']}" action="#{manageGameAccountController.trash}" rendered="#{manageGameAccountController.selectedEntity != null}" process="@this" update=":trashForm" />
                 </div>
             </h:form>
 
             <!-- The trash panel: shows entities that have been selected for deletion. -->
             <h:form id="trashForm">
-                <p:panel id="trashPanel" styleClass="trashPanel" header="#{msgsGametime['crud.text.trashHeader']}" toggleable="true" rendered="#{not empty manageContaController.trashCan}">
-                    <p:dataList value="#{manageContaController.trashCan}" var="entity" type="unordered">
+                <p:panel id="trashPanel" styleClass="trashPanel" header="#{msgsGametime['crud.text.trashHeader']}" toggleable="true" rendered="#{not empty manageGameAccountController.trashCan}">
+                    <p:dataList value="#{manageGameAccountController.trashCan}" var="entity" type="unordered">
                         #{entity.name}
                     </p:dataList>
                     <div class="nemoUtilsFormInternalButton">
-                        <p:commandButton action="#{manageContaController.cancelDeletion}" value="#{msgsGametime['crud.button.cancelDeletion']}" icon="buttonCancel" update=":trashForm :buttonsForm :listingForm" />
-                        <p:commandButton action="#{manageContaController.delete}" value="#{msgsGametime['crud.button.confirmDeletion']}" icon="buttonOk" />
-                        <p:hotkey bind="#{msgsGametime['crud.hotkey.cancelDeletion']}" action="#{manageContaController.cancelDeletion}" update=":trashForm :buttonsForm :listingForm" />
-                        <p:hotkey bind="#{msgsGametime['crud.hotkey.confirmDeletion']}" action="#{manageContaController.delete}" />
+                        <p:commandButton action="#{manageGameAccountController.cancelDeletion}" value="#{msgsGametime['crud.button.cancelDeletion']}" icon="buttonCancel" update=":trashForm :buttonsForm :listingForm" />
+                        <p:commandButton action="#{manageGameAccountController.delete}" value="#{msgsGametime['crud.button.confirmDeletion']}" icon="buttonOk" />
+                        <p:hotkey bind="#{msgsGametime['crud.hotkey.cancelDeletion']}" action="#{manageGameAccountController.cancelDeletion}" update=":trashForm :buttonsForm :listingForm" />
+                        <p:hotkey bind="#{msgsGametime['crud.hotkey.confirmDeletion']}" action="#{manageGameAccountController.delete}" />
                     </div>
                 </p:panel>
             </h:form>
