--- a/GameTime/WebContent/resources/decorator.xhtml
+++ b/GameTime/WebContent/resources/decorator.xhtml
@@ -28,7 +28,7 @@
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/"><h:outputText value="#{msgsGametime['title.home']}" /></a></li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/registration/index.faces">Registration</a></li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGame/list.faces"><h:outputText value="#{msgsGametime['title.game']}" /></a></li>
-	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageConta/list.faces"><h:outputText value="#{msgsGametime['title.conta']}" /></a></li>
+	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGameAccount/list.faces"><h:outputText value="#{msgsGametime['title.conta']}" /></a></li>
 	                <li><a href="#">Link 04</a></li>
 	                <li><a href="#" class="last">Link 05</a></li>
 	            </ul> 
