--- a/GameTime/WebContent/resources/decorator.xhtml
+++ b/GameTime/WebContent/resources/decorator.xhtml
@@ -17,7 +17,11 @@
 	    <div id="templatemo_header">
 	        <div id="website_title">
 	            <div id="title"><h:outputText value="#{msgsGametime['text.system.name']}" /></div>
-	            <div id="salgon"><h:outputText value="#{msgsGametime['text.system.salgon']}" /></div>
+	            <div id="salgon">
+	            	<h:outputText value="#{msgsGametime['text.system.salgon']}" /> <br/>
+	            	<h:outputText value="Bem-vindo #{sessionController.authenticatedUser.email}" rendered="#{ sessionController.loggedIn}"/>
+	            	<h:outputText value="Usuario não logado" rendered="#{not sessionController.loggedIn}"/>
+	            </div>
 	        </div>
 	    </div> 
     
@@ -29,8 +33,12 @@
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/registration/index.faces">Registration</a></li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGame/list.faces"><h:outputText value="#{msgsGametime['title.game']}" /></a></li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGameAccount/list.faces"><h:outputText value="#{msgsGametime['title.conta']}" /></a></li>
-	                <li><a href="#">Link 04</a></li>
-	                <li><a href="#" class="last">Link 05</a></li>
+	                <li>
+	                	<p:link rendered="#{not sessionController.loggedIn}">
+	                		<a href="#{facesContext.externalContext.requestContextPath}/login.faces" >login</a>
+	                	</p:link>
+	                	<p:commandLink action="#{sessionController.logout}" rendered="#{sessionController.loggedIn}" value="Logout"/>                 	
+	                </li>
 	            </ul> 
 	        </div>    
 	    </div>
