--- a/GameTime/WebContent/resources/decorator.xhtml
+++ b/GameTime/WebContent/resources/decorator.xhtml
@@ -30,7 +30,11 @@
 	    	<div id="templatemo_menu">
 	            <ul>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/"><h:outputText value="#{msgsGametime['title.home']}" /></a></li>
-	                <li><a href="#{facesContext.externalContext.requestContextPath}/registration/index.faces"><h:outputText value="#{msgsGametime['title.registration']}" /></a></li>
+	                <li>
+	                	<p:link rendered="#{not sessionController.loggedIn}">
+		                	<a href="#{facesContext.externalContext.requestContextPath}/registration/index.faces"><h:outputText value="#{msgsGametime['title.registration']}" /></a>
+		                </p:link>
+	                </li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGame/list.faces"><h:outputText value="#{msgsGametime['title.game']}" /></a></li>
 	                <li><a href="#{facesContext.externalContext.requestContextPath}/manageGameAccount/list.faces"><h:outputText value="#{msgsGametime['title.conta']}" /></a></li>
 	                <li>
