--- a/GameTime/WebContent/manageGame/list.xhtml
+++ b/GameTime/WebContent/manageGame/list.xhtml
@@ -14,7 +14,7 @@
     <ui:define name="contents">
     	
         
-        <h1><h:outputText value="#{msgsGametime['manageGame.title']}" /></h1>
+        <h1 align="center"><h:outputText value="#{msgsGametime['manageGame.title']}" /></h1>
 
         <div class="crud">
   
