--- a/GameTime/WebContent/resources/form.xhtml
+++ b/GameTime/WebContent/resources/form.xhtml
@@ -5,7 +5,7 @@
 								xmlns:h="http://java.sun.com/jsf/html"
 								xmlns:f="http://java.sun.com/jsf/core">
 
-	<div class="gameForm">
+	<div align="center" class="gameForm">
 		<f:validateBean>
 			<ui:insert />
 		</f:validateBean>
