--- a/GameTime/WebContent/resources/formbutton.xhtml
+++ b/GameTime/WebContent/resources/formbutton.xhtml
@@ -5,7 +5,8 @@
 								xmlns:h="http://java.sun.com/jsf/html"
 								xmlns:f="http://java.sun.com/jsf/core">
 
-	<div class="sigmeFormButton">
+	<div align="center" class="sigmeFormButton">
+		<br />
 		<ui:insert />
 	</div>
 </ui:composition>
