Atualização - Messages/Layout

--- a/GameTime/WebContent/login.xhtml
+++ b/GameTime/WebContent/login.xhtml
@@ -45,7 +45,7 @@
 			      	</h:form>
 			      	
 			      	<ui:decorate template="/resources/formbutton.xhtml">
-						<p:commandButton action="#{sessionController.autoLogin}" value="autoLogin"  update=":globalMessages form" />
+						<p:commandButton action="#{sessionController.autoLogin}" value="#{msgsGametime['login.button.auto.login']}"  update=":globalMessages form" />
 					</ui:decorate>  
 			      	
 				</ui:decorate>
