--- a/GameTime/WebContent/manageGameAccount/form.xhtml
+++ b/GameTime/WebContent/manageGameAccount/form.xhtml
@@ -55,7 +55,7 @@
                         <ui:decorate template="/resources/formfield.xhtml">
                             <ui:param name="fieldName" value="form:login" />
                             <ui:define name="label"><h:outputText value="#{msgsGametime['manageGameAccount.form.login']}" /></ui:define>
-                            <p:inputText id="login" value="#{manageGameAccountController.selectedEntity.login}" size="50" required="true" disabled="#{manageGameAccountController.readOnly}">
+                            <p:inputText id="login" value="#{manageGameAccountController.selectedEntity.login}" size="50" required="true" disabled="#{manageGameAccountController.readOnly or (manageGameAccountController.selectedEntity.id != null) }">
                                 <p:ajax event="blur" update="loginField" />
                             </p:inputText>
                         </ui:decorate>
