--- a/GameTime/WebContent/manageGroupGame/list.xhtml
+++ b/GameTime/WebContent/manageGroupGame/list.xhtml
@@ -33,7 +33,7 @@
                         selection="#{manageGroupGameController.selectedEntity}" 
                         selectionMode="single" 
                         loadingMessage="#{msgsGametime['text.ajax.loading']}" 
-                        emptyMessage="#{ msgsGametime['manageGame.text.noEntities']}">
+                        emptyMessage="#{ msgsGametime['manageGrupoGame.text.noEntities']}">
 
                         <p:column headerText="#{msgsGametime['manageGroupGame.table.name']}">
                             <h:outputText value="#{entity.name}" />
