Trabalho 2 - Final Commit

--- a/GameTime/WebContent/manageFriendInvitation/invite.xhtml
+++ b/GameTime/WebContent/manageFriendInvitation/invite.xhtml
@@ -29,7 +29,7 @@
 					</h:panelGroup>
 					
                     <ui:decorate template="/resources/formbutton.xhtml">
-                            <p:commandButton action="#{manageFriendInvitationController.register}" value="#{msgsGametime['manageFriendInvitation.form.button']}" update=":form :globalMessages"/>
+                            <p:commandButton action="#{manageFriendInvitationController.register}" value="#{msgsGametime['manageFriendInvitation.form.button']}" update=":form :globalMessages" icon="buttonSendmail"/>
                     </ui:decorate>
                     
 			</h:form>
