--- a/GameTime/WebContent/manageGroupGame/list.xhtml
+++ b/GameTime/WebContent/manageGroupGame/list.xhtml
@@ -59,9 +59,9 @@
                     <p:commandButton action="#{manageGroupGameController.create}" value="#{msgsGametime['crud.button.create']}" icon="buttonNew" update=":globalMessages"/>
                     <p:commandButton action="#{manageGroupGameController.trash}" value="#{msgsGametime['crud.button.delete']}" icon="buttonTrash" disabled="#{manageGroupGameController.selectedEntity.adminUser != sessionController.authenticatedUser}" process="@this" update=":trashForm :globalMessages" />
                     
-                    <p:commandButton action="#{manageGroupGameController.addUser}" value="#{msgsGametime['manageGroupGame.button.addUser']}"  disabled="#{manageGroupGameController.selectedEntity.adminUser != sessionController.authenticatedUser}" process="@this" update=":globalMessages" />
-                    <p:commandButton action="#{manageGameAccountController.list}" value="#{msgsGametime['manageGroupGame.button.addConta']}"  disabled="#{(manageGroupGameController.selectedEntity.adminUser != sessionController.authenticatedUser) or manageGroupGameController.selectedEntity == null }" process="@this"/>
-                	<p:commandButton action="#{manageGameAccountController.jogar}" value="#{msgsGametime['manageGroupGame.button.play']}"  disabled="#{(manageGroupGameController.selectedEntity == null)}" process="@this" update=":globalMessages" />
+                    <p:commandButton action="#{manageGroupGameController.addUser}" value="#{msgsGametime['manageGroupGame.button.addUser']}"  disabled="#{manageGroupGameController.selectedEntity.adminUser != sessionController.authenticatedUser}" process="@this" update=":globalMessages" icon="menuCoreCrudsManageSpiritists"/>
+                    <p:commandButton action="#{manageGameAccountController.list}" value="#{msgsGametime['manageGroupGame.button.addConta']}"  disabled="#{(manageGroupGameController.selectedEntity.adminUser != sessionController.authenticatedUser) or manageGroupGameController.selectedEntity == null }" process="@this" icon="buttonAccounts"/>
+                	<p:commandButton action="#{manageGameAccountController.jogar}" value="#{msgsGametime['manageGroupGame.button.play']}"  disabled="#{(manageGroupGameController.selectedEntity == null)}" process="@this" update=":globalMessages" icon="buttonPlay"/>
                     
                 </div>
             </h:form>
