--- a/GameTime/WebContent/resources/decorator.xhtml
+++ b/GameTime/WebContent/resources/decorator.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
@@ -8,9 +9,31 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="#{facesContext.externalContext.requestContextPath}/resources/templatemo_style.css" rel="stylesheet" type="text/css" />
 	<link href="#{facesContext.externalContext.requestContextPath}/resources/gametime.css" rel="stylesheet" type="text/css" />
+	<link href="#{facesContext.externalContext.requestContextPath}/resources/buttons.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" type="image/png" href="#{facesContext.externalContext.requestContextPath}/resources/icons/game.ico" />
 	<title><ui:insert name="title" /></title>
 </h:head>
 <h:body>
+		
+		<!-- Salao Ajax status indicator: -->
+		<div id="ajaxStatus">
+			<h:form id="statusForm">
+				<p:ajaxStatus>
+					<f:facet name="start">
+						<h:graphicImage alt="#{msgsSalao['text.ajax.loading.alt']}" title="#{msgsSalao['text.ajax.loading']}"
+							url="/resources/icons/ajaxstatus-start.gif" />
+					</f:facet>
+					<f:facet name="error">
+						<h:graphicImage alt="#{msgsSalao['text.ajax.error.alt']}" title="#{msgsSalao['text.ajax.error']}"
+							url="/resources/icons/ajaxstatus-error.png" />
+					</f:facet>
+					<f:facet name="complete">
+						<h:graphicImage alt="#{msgsSalao['text.ajax.complete.alt']}" title="#{msgsSalao['text.ajax.complete']}"
+							url="/resources/icons/ajaxstatus-complete.png" />
+					</f:facet>
+				</p:ajaxStatus>
+			</h:form>
+		</div>
 		
 	<div id="templatemo_container">
 	    
